--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@heroui/use-theme": "2.1.6",
     "@react-aria/visually-hidden": "3.8.20",
     "@react-types/shared": "3.28.0",
+    "axios": "^1.8.3",
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
     "react": "18.3.1",
