--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,5 +1,4 @@
 # compiled output
-/dist
 /node_modules
 /build
 /package-lock.json
@@ -55,3 +54,4 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+.vercel
