--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,6 +1,5 @@
 {
   "version": 2,
-
   "builds": [
     {
       "src": "dist/main.js",
@@ -10,7 +9,8 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/main.js"
+      "dest": "dist/main.js",
+      "methods": ["GET", "POST", "PUT", "DELETE"]
     }
   ]
-} 
+}
